# tinyrenderer_rs

./: .gitignore  Cargo.toml
src/: color.rs  fps.rs  framebuffer.rs  image_rw.rs  lib.rs  main.rs  model.rs  primitive.rs  texture.rs
tests/: tests.rs
