[package]
name = "tinyrenderer_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
minifb = "0.24.0"
nalgebra = "0.32.2"
rand = "0.8.5"
stb_image_rust = "2.27.2"
stb_image_write_rust = "1.16.1"
